working on images

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Matt Thatcher</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,22 +15,21 @@
 
 		<!-- Header -->
 			<div id="header">
+				<img src="images/pic01.jpg" alt="" />
 				<span class="logo icon fa-paper-plane-o"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
-				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<h1>Hello. This is my portfolio.</h1>
+				<p>Here I have chronicled the projects I have worked on.</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We conduct experiments that
+					<h2>Take a look below at the 
 					<br />
-					may or may not seriously
+					projects I've been 
 					<br />
-					break the universe</h2>
+					working on.</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
@@ -39,24 +38,24 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-signal"><img src="header-img.png" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>The Great Idea Website</h3>
+							<p>This was the first project I worked on at Lambda School. The goal was to replicate a design file using a few of the HTML and CSS techniques including the dreaded block layout learned in the first week and Lambda School</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Flex Box Project</h3>
+							<p>This project helped me to learn about the flex box layout model. I updated the Great Idea Website to link to a few related pages.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Week 1 Sprint Challenge</h3>
+							<p>This project was used to test the skills I learned during my first week at Lambda School.</p>
 						</div>
 					</section>
 				</div>
