MVP Portfolio Website

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,10 +15,11 @@
 
 		<!-- Header -->
 			<div id="header">
-				<img src="images/pic01.jpg" alt="" />
 				<span class="logo icon fa-paper-plane-o"></span>
 				<h1>Hello. This is my portfolio.</h1>
-				<p>Here I have chronicled the projects I have worked on.</p>
+				<p>My name is Matt Thatcher. <br>
+				I'm a full-stack web development student at Lambda School 
+				<br>Here I have chronicled the projects I have worked on.</p>
 			</div>
 
 		<!-- Main -->
@@ -38,21 +39,21 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="header-img.png" alt="" /></a>
+						<a href="https://github.com/mmthatch12/User-Interface/tree/matt-thatcher" class="image icon fa-signal"><img src="images/header-img.png" alt="" /></a>
 						<div class="content">
 							<h3>The Great Idea Website</h3>
 							<p>This was the first project I worked on at Lambda School. The goal was to replicate a design file using a few of the HTML and CSS techniques including the dreaded block layout learned in the first week and Lambda School</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="https://github.com/mmthatch12/UI-III-Flexbox/tree/matt-thatcher" class="image icon fa-code"><img src="images/services-header.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Flex Box Project</h3>
 							<p>This project helped me to learn about the flex box layout model. I updated the Great Idea Website to link to a few related pages.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="https://github.com/mmthatch12/Sprint-Challenge--User-Interface/tree/matt-thatcher" class="image icon fa-mobile"><img src="images/jumbo-about.png" alt="" /></a>
 						<div class="content">
 							<h3>Week 1 Sprint Challenge</h3>
 							<p>This project was used to test the skills I learned during my first week at Lambda School.</p>
@@ -204,10 +205,10 @@
 				-->
 
 				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<h3>Websites that are beautiful and usefull</h3>
+					<p>If you would like your website to be my next beautiful and usefull project, click the button below so we can get started.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Join our crew</a></li>
+						<li><a href="#" class="button">Next Project</a></li>
 					</ul>
 				</footer>
 
@@ -221,8 +222,7 @@
 						<h2>Questions or comments?</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p>Fill out the form below to send me any questions or comments.</p>
 
 					<form method="post" action="#">
 						<div class="row">
